# raylib-pathing

./: .gitmodules  CMakeLists.txt  README.md  compile_commands.json
assets/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  assets  cmake_install.cmake  compile_commands.json  raylib-grid
assets/CPM_modules/: Findraylib.cmake
assets/lib/raygui-cpp/: Makefile  cmake_install.cmake
assets/lib/raygui-cpp/examples/: ButtonCallbacks  ButtonPlacement  ChildComponents  Makefile  cmake_install.cmake
assets/styles/: dark.rgs
include/: defs.hh  pathfinder.hh  world.hh
src/: main.cc  pathfinder.cc  world.cc
